--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
+    "react-page-scroller": "^2.2.1",
     "styled-components": "^5.2.3"
   }
 }
