--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "axios": "^0.26.1",
+    "boxicons": "^2.1.2",
     "next": "latest",
     "nodemailer": "^6.7.2",
     "react": "^17.0.2",
